# Console-maze

./: CMakeLists.txt  README.md
src/: main.cpp  maze.h  player.h
